--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -863,6 +863,7 @@
 	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.label": "Uniquement les résultats sémantiques",
 	"widget.generator.advanced.generative-answer-category.only-answers.help": "Affiche les réponses mais pas les résultats de la recherche. ",
 	"widget.generator.advanced.generative-answer-category.only-answers.label": "Seules les réponses",
+	"widget.generator.advanced.generative-answer-category.prompt.error": "Il semble que vous n'utilisez aucune variable dans cette invite utilisateur, cela pourrait produire des réponses incohérentes. Veuillez vérifier les exemples d'invites utilisateur dans la page des paramètres.",
 	"widget.generator.advanced.generative-answer-category.prompt.help": "Il aura priorité sur le prompt utilisateur définie dans les paramètres de la Knowledge Box. Remarque : la stratégie de prompt peut changer en fonction du modèle génératif. Vérifiez les exemples dans la page des paramètres.",
 	"widget.generator.advanced.generative-answer-category.prompt.label": "Prompt utilisateur",
 	"widget.generator.advanced.generative-answer-category.title": "Réponses génératives",
