[sc-7951] Fix translation key conflicts

--- a/libs/sync/src/assets/i18n/ca.json
+++ b/libs/sync/src/assets/i18n/ca.json
@@ -2,15 +2,12 @@
 	"account.trial-end.help": "La prova de 15 dies ha caducat i el vostre compte s'ha bloquejat. Pots subscriure't a un dels nostres plans o contactar amb nosaltres per ampliar la prova.",
 	"account.trial-end.title": "Oh! La teva prova gratuïta ha finalitzat",
 	"account.trial-end.upgrade": "Subscriu-te",
-	"generic.cancel": "Cancel·lar",
-	"generic.delete": "Eliminar",
-	"generic.logout": "Sortir",
-	"generic.save": "Desar",
-	"generic.select_tags": "Selecciona etiquetes",
-	"generic.server_down": "El servidor de sincronització està inactiu",
-	"generic.server_up": "El servidor de sincronització està activat",
-	"generic.switch_account": "Canviar de compte",
-	"generic.upload": "Pujar",
+	"action.cancel": "Cancel·lar",
+	"action.delete": "Eliminar",
+	"action.logout": "Sortir",
+	"action.save": "Desar",
+	"action.switch_account": "Canviar de compte",
+	"action.upload": "Pujar",
 	"history.clear": "Netjar historial",
 	"history.data": "Dades",
 	"history.date": "Data",
@@ -44,6 +41,8 @@
 	"upload.server.external-button": "Utilitzeu un servidor extern",
 	"upload.server.local": "Servidor local",
 	"upload.server.local-button": "Utilitzeu el servidor local",
+	"upload.server.server_down": "El servidor de sincronització està inactiu",
+	"upload.server.server_up": "El servidor de sincronització està activat",
 	"upload.server.title": "Connecteu-vos al servidor de sincronització",
 	"upload.server.url": "URL del servidor",
 	"upload.source.confirm-delete-description": "Si elimines aquest connector, es cancel·laran totes les pujades actives d'aquest connector. No podeu desfer aquesta acció.",
