--- a/libs/sync/src/assets/i18n/de.json
+++ b/libs/sync/src/assets/i18n/de.json
@@ -2,15 +2,12 @@
 	"account.trial-end.help": "Die 15-tägige Testversion ist abgelaufen und Ihr Konto wurde gesperrt. Sie können entweder einen unserer Pläne abonnieren oder uns für eine Verlängerung der Testversion kontaktieren.",
 	"account.trial-end.title": "Oh! Ihre kostenlose Testversion ist beendet",
 	"account.trial-end.upgrade": "Abonnieren",
-	"generic.cancel": "Stornieren",
-	"generic.delete": "Löschen",
-	"generic.logout": "Ausloggen",
-	"generic.save": "Sparen",
-	"generic.select_tags": "Wählen Sie die Beschriftungen aus",
-	"generic.server_down": "Der Synchronisierungsserver ist ausgefallen",
-	"generic.server_up": "Der Synchronisierungsserver ist aktiv",
-	"generic.switch_account": "Benutzer wechseln",
-	"generic.upload": "Hochladen",
+	"action.cancel": "Stornieren",
+	"action.delete": "Löschen",
+	"action.logout": "Ausloggen",
+	"action.save": "Sparen",
+	"action.switch_account": "Benutzer wechseln",
+	"action.upload": "Hochladen",
 	"history.clear": "Klare Geschichte",
 	"history.data": "Daten",
 	"history.date": "Datum",
@@ -26,8 +23,8 @@
 	"pastanaga.cancel": "Stornieren",
 	"pastanaga.confirm": "Bestätigen",
 	"pastanaga.datetime.a-few-seconds-ago": "Gerade jetzt",
-	"pastanaga.datetime.at": "bei",
-	"pastanaga.datetime.minutesAgo": "Vor {{minutes}} Minuten",
+	"pastanaga.datetime.at": "beim",
+	"pastanaga.datetime.minutesAgo": "Vor{{minutes}} min",
 	"pastanaga.datetime.one-minute-ago": "Vor 1 Minute",
 	"pastanaga.datetime.yesterday": "Gestern",
 	"upload.add-connector": "Connector hinzufügen",
@@ -44,6 +41,8 @@
 	"upload.server.external-button": "Verwenden Sie einen externen Server",
 	"upload.server.local": "Lokaler Server",
 	"upload.server.local-button": "Verwenden Sie einen lokalen Server",
+	"upload.server.server_down": "Der Synchronisierungsserver ist ausgefallen",
+	"upload.server.server_up": "Der Synchronisierungsserver ist aktiv",
 	"upload.server.title": "Stellen Sie eine Verbindung zum Synchronisierungsserver her",
 	"upload.server.url": "Server-URL",
 	"upload.source.confirm-delete-description": "Wenn Sie diesen Connector löschen, werden alle aktiven Uploads von dieser Ressource abgebrochen. Sie können diese Aktion nicht rückgängig machen.",
