--- a/libs/sync/src/assets/i18n/en.json
+++ b/libs/sync/src/assets/i18n/en.json
@@ -2,15 +2,12 @@
 	"account.trial-end.help": "The 15-day trial has expired and your account has been blocked. You can either subscribe to one of our plans or contact us for an extension of the trial.",
 	"account.trial-end.title": "Oh! Your free trial has ended",
 	"account.trial-end.upgrade": "Subscribe",
-	"generic.cancel": "Cancel",
-	"generic.delete": "Delete",
-	"generic.logout": "Log out",
-	"generic.save": "Save",
-	"generic.select_tags": "Select the labels",
-	"generic.server_down": "Sync server is down",
-	"generic.server_up": "Sync server is up",
-	"generic.switch_account": "Switch account",
-	"generic.upload": "Upload",
+	"action.cancel": "Cancel",
+	"action.delete": "Delete",
+	"action.logout": "Log out",
+	"action.save": "Save",
+	"action.switch_account": "Switch account",
+	"action.upload": "Upload",
 	"history.clear": "Clear history",
 	"history.data": "Data",
 	"history.date": "Date",
@@ -27,7 +24,7 @@
 	"pastanaga.confirm": "Confirm",
 	"pastanaga.datetime.a-few-seconds-ago": "Just now",
 	"pastanaga.datetime.at": "at",
-	"pastanaga.datetime.minutesAgo": "{{minutes}} mins ago",
+	"pastanaga.datetime.minutesAgo": "{{minutes}} min ago",
 	"pastanaga.datetime.one-minute-ago": "1 min ago",
 	"pastanaga.datetime.yesterday": "Yesterday",
 	"upload.add-connector": "Add connector",
@@ -44,6 +41,8 @@
 	"upload.server.external-button": "Use external server",
 	"upload.server.local": "Local server",
 	"upload.server.local-button": "Use local server",
+	"upload.server.server_down": "Sync server is down",
+	"upload.server.server_up": "Sync server is up",
 	"upload.server.title": "Connect to sync server",
 	"upload.server.url": "Server URL",
 	"upload.source.confirm-delete-description": "If you delete this connector, all active uploads from this resource will be canceled. You cannot undo this action.",
