--- a/libs/sync/src/assets/i18n/es.json
+++ b/libs/sync/src/assets/i18n/es.json
@@ -2,15 +2,12 @@
 	"account.trial-end.help": "La prueba de 15 días ha expirado y su cuenta ha sido bloqueada. Puede suscribirse a uno de nuestros planes o contactarnos para una extensión de la prueba.",
 	"account.trial-end.title": "¡Oh! Su prueba gratuita ha finalizado",
 	"account.trial-end.upgrade": "Suscribir",
-	"generic.cancel": "Cancelar",
-	"generic.delete": "Eliminar",
-	"generic.logout": "Salir",
-	"generic.save": "Guardar",
-	"generic.select_tags": "Selecciona etiquetas",
-	"generic.server_down": "El servidor de sincronización está inactivo",
-	"generic.server_up": "El servidor de sincronización está activo",
-	"generic.switch_account": "Cambia de cuenta",
-	"generic.upload": "Subir",
+	"action.cancel": "Cancelar",
+	"action.delete": "Eliminar",
+	"action.logout": "Salir",
+	"action.save": "Guardar",
+	"action.switch_account": "Cambia de cuenta",
+	"action.upload": "Subir",
 	"history.clear": "Borrar historial",
 	"history.data": "Datos",
 	"history.date": "Fecha",
@@ -44,6 +41,8 @@
 	"upload.server.external-button": "Usar servidor externo",
 	"upload.server.local": "Servidor local",
 	"upload.server.local-button": "Usar servidor local",
+	"upload.server.server_down": "El servidor de sincronización está inactivo",
+	"upload.server.server_up": "El servidor de sincronización está activo",
 	"upload.server.title": "Conectarse al servidor de sincronización",
 	"upload.server.url": "URL del servidor",
 	"upload.source.confirm-delete-description": "Si eliminas este conector, se cancelarán todas las subidas activas de este conector. No se puede deshacer esta acción.",
