--- a/libs/sync/src/assets/i18n/fr.json
+++ b/libs/sync/src/assets/i18n/fr.json
@@ -2,15 +2,12 @@
 	"account.trial-end.help": "L'essai de 15 jours a expiré et votre compte a été bloqué. Vous pouvez soit souscrire à l'un de nos forfaits, soit nous contacter pour une prolongation de l'essai.",
 	"account.trial-end.title": "Oh! Votre essai gratuit est terminé",
 	"account.trial-end.upgrade": "Souscrire",
-	"generic.cancel": "Annuler",
-	"generic.delete": "Supprimer",
-	"generic.logout": "Déconnexion",
-	"generic.save": "Enregistrer",
-	"generic.select_tags": "Sélectionnez les étiquettes",
-	"generic.server_down": "Le serveur de synchronisation est en panne",
-	"generic.server_up": "Le serveur de synchronisation est opérationnel",
-	"generic.switch_account": "Changer de compte",
-	"generic.upload": "Télécharger",
+	"action.cancel": "Annuler",
+	"action.delete": "Supprimer",
+	"action.logout": "Déconnexion",
+	"action.save": "Enregistrer",
+	"action.switch_account": "Changer de compte",
+	"action.upload": "Télécharger",
 	"history.clear": "Effacer l'historique",
 	"history.data": "Données",
 	"history.date": "Date",
@@ -25,7 +22,7 @@
 	"login.not-connected": "Vous n'êtes pas connecté, cliquez sur le bouton pour vous connecter via votre navigateur",
 	"pastanaga.cancel": "Annuler",
 	"pastanaga.confirm": "Confirmer",
-	"pastanaga.datetime.a-few-seconds-ago": "À l'instant",
+	"pastanaga.datetime.a-few-seconds-ago": "Maintenant",
 	"pastanaga.datetime.at": "à",
 	"pastanaga.datetime.minutesAgo": "Il y a {{minutes}} minutes",
 	"pastanaga.datetime.one-minute-ago": "Il y a 1 minute",
@@ -44,6 +41,8 @@
 	"upload.server.external-button": "Utiliser un serveur externe",
 	"upload.server.local": "Serveur local",
 	"upload.server.local-button": "Utiliser le serveur local",
+	"upload.server.server_down": "Le serveur de synchronisation est en panne",
+	"upload.server.server_up": "Le serveur de synchronisation est opérationnel",
 	"upload.server.title": "Se connecter au serveur de synchronisation",
 	"upload.server.url": "URL du serveur",
 	"upload.source.confirm-delete-description": "Si vous supprimez ce connecteur, tous les téléchargements actifs depuis ce connecteur seront annulés. Vous ne pouvez pas annuler cette action.",
