--- a/libs/sync/src/assets/i18n/pt.json
+++ b/libs/sync/src/assets/i18n/pt.json
@@ -2,15 +2,12 @@
 	"account.trial-end.help": "O teste de 15 dias expirou e sua conta foi bloqueada. Você pode assinar um de nossos planos ou entrar em contato conosco para prolongar o período de avaliação.",
 	"account.trial-end.title": "Oh! Seu teste gratuito terminou",
 	"account.trial-end.upgrade": "Se inscrever",
-	"generic.cancel": "Cancelar",
-	"generic.delete": "Excluir",
-	"generic.logout": "Sair",
-	"generic.save": "Salvar",
-	"generic.select_tags": "Selecione os rótulos",
-	"generic.server_down": "O servidor de sincronização está inativo",
-	"generic.server_up": "O servidor de sincronização está ativo",
-	"generic.switch_account": "Mudar de conta",
-	"generic.upload": "Envio",
+	"action.cancel": "Cancelar",
+	"action.delete": "Excluir",
+	"action.logout": "Sair",
+	"action.save": "Salvar",
+	"action.switch_account": "Mudar de conta",
+	"action.upload": "Envio",
 	"history.clear": "Limpar histórico",
 	"history.data": "Dados",
 	"history.date": "Encontro",
@@ -44,6 +41,8 @@
 	"upload.server.external-button": "Usar servidor externo",
 	"upload.server.local": "Servidor local",
 	"upload.server.local-button": "Usar servidor local",
+	"upload.server.server_down": "O servidor de sincronização está inativo",
+	"upload.server.server_up": "O servidor de sincronização está ativo",
 	"upload.server.title": "Conecte-se ao servidor de sincronização",
 	"upload.server.url": "URL do servidor",
 	"upload.source.confirm-delete-description": "Se você excluir esse conector, todos os uploads ativos desse recurso serão cancelados. Você não pode desfazer esta ação.",
