Getting started modal
  - New `getting-started` modal with one component by step (intro, upload, processing)
  - Create `upload.utils.ts` with some upload utility methods like `getFilesByType`, `getFilesGroupedByType`
  - Refactor uploadService:
     - we can now use its uploadFiles method without triggering any toast
     - new method `checkFileTypesAndConfirm` for warnings about spreadsheet and archive uploads
  - Move progress-bar component to sistema

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -389,6 +389,34 @@
 	"generic.yes": "Sí",
 	"generic.zone": "Zona de processament",
 	"generic.zone_and_provider": "Zona i proveïdor de processament",
+	"getting-started.intro.highlighted-description": "Pengeu algunes dades de les quals voleu obtenir respostes.",
+	"getting-started.intro.step1": "Seleccioneu algun contingut o dades",
+	"getting-started.intro.step2": "Carregueu-lo a Nuclia per processar-lo",
+	"getting-started.intro.step3": "Comenceu a fer una pregunta a Nuclia",
+	"getting-started.intro.three-steps-headline": "Només esteu a tres passos curts per generar respostes a partir de les vostres dades",
+	"getting-started.intro.title": "Comença amb només 3 passos senzills",
+	"getting-started.processing.description": "Depenent del contingut, pot trigar uns minuts a processar les vostres dades a la base de dades vectorials NucliaDB.",
+	"getting-started.processing.estimated-time": "Temps de processament estimat: {{estimation}}min",
+	"getting-started.processing.status.estimated-time": "Queden {{estimation}} min",
+	"getting-started.processing.status.failed": "Fracassat",
+	"getting-started.processing.status.processed": "Processament completat",
+	"getting-started.processing.status.processing": "Processament",
+	"getting-started.processing.status.queued": "En cua",
+	"getting-started.processing.status.uploading": "S'està penjant",
+	"getting-started.processing.title": "2. Càrrega i processament",
+	"getting-started.search.description": "Feu preguntes sobre les vostres dades, compareu resultats, creeu resums o xateja amb els vostres documents.",
+	"getting-started.search.go-to-search": "Aneu a la pàgina de cerca",
+	"getting-started.search.title": "3. Obteniu respostes",
+	"getting-started.upload.and-or": "i/o",
+	"getting-started.upload.description": "Pengeu part del vostre contingut en forma de fitxers o enllaços de llocs web disponibles públicament. Un cop penjat, pot trigar uns minuts a processar el contingut i preparar les vostres dades.",
+	"getting-started.upload.disclaimer.dont-worry": "No us preocupeu, sempre podreu afegir més i més contingut fàcilment més endavant.",
+	"getting-started.upload.disclaimer.dont-worry-trial": "No us preocupeu, la vostra prova gratuïta us permetrà afegir fàcilment més i més contingut més endavant.",
+	"getting-started.upload.disclaimer.first-links-toast": "Només hem conservat els {{count}} primers URLs dels {{total}} que heu seleccionat.",
+	"getting-started.upload.disclaimer.limit": "<strong>Pengeu fins a 5 pàgines web o fitxers</strong>, mantenint-los petits perquè el processament sigui ràpid (fins a 20 pàgines de documents o 5 minuts de pel·lícula o àudio).",
+	"getting-started.upload.disclaimer.smallest-files-toast": "Només hem conservat els {{count}} fitxers més petits dels {{total}} que heu seleccionat.",
+	"getting-started.upload.link-textarea.help": "Un URL per línia",
+	"getting-started.upload.link-textarea.label": "Escriviu o enganxeu els URLs de les pàgines web",
+	"getting-started.upload.title": "1. Carregueu dades",
 	"label-set.add": "Afegeix conjunt d'etiquetes",
 	"label-set.add-button": "Afegir nou",
 	"label-set.delete.confirm-description": "Si suprimiu el conjunt d'etiquetes, també se suprimiran totes les seves etiquetes. No podeu desfer aquesta acció. També pot afectar les formacions en curs i els suggeriments generats.",
