--- a/libs/common/src/assets/i18n/de.json
+++ b/libs/common/src/assets/i18n/de.json
@@ -390,6 +390,34 @@
 	"generic.yes": "Ja",
 	"generic.zone": "Verarbeitungszone",
 	"generic.zone_and_provider": "Anbieter und Verarbeitungszone",
+	"getting-started.intro.highlighted-description": "Laden Sie einige Daten hoch, zu denen Sie Antworten wünschen.",
+	"getting-started.intro.step1": "Wählen Sie Inhalte oder Daten aus",
+	"getting-started.intro.step2": "Laden Sie es zur Verarbeitung auf Nuclia hoch",
+	"getting-started.intro.step3": "Stellen Sie Nuclia eine Frage",
+	"getting-started.intro.three-steps-headline": "Sie sind nur noch drei Schritte von der Generierung von Antworten aus Ihren Daten entfernt",
+	"getting-started.intro.title": "Starten Sie in nur 3 einfachen Schritten",
+	"getting-started.processing.description": "Je nach Inhalt kann die Verarbeitung Ihrer Daten in der NucliaDB-Vektordatenbank einige Minuten dauern.",
+	"getting-started.processing.estimated-time": "Geschätzte Bearbeitungszeit: {{estimation}}Min",
+	"getting-started.processing.status.estimated-time": "Noch {{estimation}}  Min übrig",
+	"getting-started.processing.status.failed": "Gescheitert",
+	"getting-started.processing.status.processed": "Verarbeitung abgeschlossen",
+	"getting-started.processing.status.processing": "Behandlung",
+	"getting-started.processing.status.queued": "In Warteschlange",
+	"getting-started.processing.status.uploading": "Hochladen",
+	"getting-started.processing.title": "2. Hochladen und Bearbeiten",
+	"getting-started.search.description": "Stellen Sie Fragen zu Ihren Daten, vergleichen Sie Ergebnisse, erstellen Sie Zusammenfassungen oder chatten Sie mit Ihren Dokumenten.",
+	"getting-started.search.go-to-search": "Gehe zur Suchseite",
+	"getting-started.search.title": "3. Erhalten Sie Antworten",
+	"getting-started.upload.and-or": "Und / oder",
+	"getting-started.upload.description": "Laden Sie einige Ihrer Inhalte in Form von Dateien oder öffentlich zugänglichen Website-Links hoch. Nach dem Hochladen kann es einige Minuten dauern, bis der Inhalt verarbeitet und Ihre Daten vorbereitet sind.",
+	"getting-started.upload.disclaimer.dont-worry": "Keine Sorge, Sie können später jederzeit problemlos weitere und größere Inhalte hinzufügen.",
+	"getting-started.upload.disclaimer.dont-worry-trial": "Machen Sie sich keine Sorgen, mit Ihrer kostenlosen Testversion können Sie später problemlos weitere und größere Inhalte hinzufügen.",
+	"getting-started.upload.disclaimer.first-links-toast": "Von den {{total}} , die Sie ausgewählt haben, haben wir nur die ersten {{count}} URLs beibehalten.",
+	"getting-started.upload.disclaimer.limit": "<strong>Laden Sie bis zu 5 Webseiten oder Dateien hoch</strong>und halten Sie sie klein, damit die Verarbeitung schnell bleibt (bis zu 20 Seiten Dokumente oder 5 Minuten Film oder Audio).",
+	"getting-started.upload.disclaimer.smallest-files-toast": "Von den {{total}} , die Sie ausgewählt haben, haben wir nur die {{count}} kleinsten Dateien behalten.",
+	"getting-started.upload.link-textarea.help": "Eine URL pro Zeile",
+	"getting-started.upload.link-textarea.label": "Geben oder fügen Sie Webseiten-URLs ein",
+	"getting-started.upload.title": "1. Daten hochladen",
 	"label-set.add": "Etikettensatz hinzufügen",
 	"label-set.add-button": "Neue hinzufügen",
 	"label-set.delete.confirm-description": "Durch das Löschen des Etikettensatzes werden auch alle zugehörigen Etiketten gelöscht. Sie können diese Aktion nicht rückgängig machen. Es kann sich auch auf laufende Schulungen und generierte Vorschläge auswirken.",
