--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -390,6 +390,34 @@
 	"generic.yes": "Yes",
 	"generic.zone": "Processing zone",
 	"generic.zone_and_provider": "Provider and processing zone",
+	"getting-started.intro.highlighted-description": "Upload some data you would like answers from.",
+	"getting-started.intro.step1": "Select some content or data",
+	"getting-started.intro.step2": "Upload it to Nuclia for processing",
+	"getting-started.intro.step3": "Start asking Nuclia question",
+	"getting-started.intro.three-steps-headline": "You’re just three short steps away from generating answers from your data",
+	"getting-started.intro.title": "Get started in just 3 simple steps",
+	"getting-started.processing.description": "Depending on the contents, it can take a few minutes to process your data into the NucliaDB vector database.",
+	"getting-started.processing.estimated-time": "Estimated processing time: {{estimation}}min",
+	"getting-started.processing.status.estimated-time": "{{estimation}} min left",
+	"getting-started.processing.status.failed": "Failed",
+	"getting-started.processing.status.processed": "Processing completed",
+	"getting-started.processing.status.processing": "Processing",
+	"getting-started.processing.status.queued": "Queued",
+	"getting-started.processing.status.uploading": "Uploading",
+	"getting-started.processing.title": "2. Uploading and processing",
+	"getting-started.search.description": "Ask questions about your data, compare results, create summaries, or chat with your documents.",
+	"getting-started.search.go-to-search": "Go to search page",
+	"getting-started.search.title": "3. Get answers",
+	"getting-started.upload.and-or": "and / or",
+	"getting-started.upload.description": "Upload some of your content in the form of files or publicly available website links. Once uploaded, it may take a few minutes to process the content and prepare your data.",
+	"getting-started.upload.disclaimer.dont-worry": "Don't worry, you'll always be able to easily add more and larger contents later.",
+	"getting-started.upload.disclaimer.dont-worry-trial": "Don't worry, your free trial will let you easily add more and larger contents later.",
+	"getting-started.upload.disclaimer.first-links-toast": "We kept only the {{count}} first URLs out of the {{total}} you selected.",
+	"getting-started.upload.disclaimer.limit": "<strong>Upload up to 5 web pages or files</strong>, keeping them small so processing stays fast (up to 20 pages documents or 5min movie or audio).",
+	"getting-started.upload.disclaimer.smallest-files-toast": "We kept only the {{count}} smallest files out of the {{total}} you selected.",
+	"getting-started.upload.link-textarea.help": "One URL per line",
+	"getting-started.upload.link-textarea.label": "Type or paste web page URLs",
+	"getting-started.upload.title": "1. Upload data",
 	"label-set.add": "Add label set",
 	"label-set.add-button": "Add new",
 	"label-set.delete.confirm-description": "Deleting the label set will also delete all its labels. You cannot undo this action. It might also affect ongoing trainings and generated suggestions.",
