--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -389,6 +389,34 @@
 	"generic.yes": "Sí",
 	"generic.zone": "Zona de procesamiento",
 	"generic.zone_and_provider": "Zona y proveedor de procesamiento",
+	"getting-started.intro.highlighted-description": "Cargue algunos datos de los que le gustaría obtener respuestas.",
+	"getting-started.intro.step1": "Seleccione algún contenido o datos",
+	"getting-started.intro.step2": "Súbelo a Nuclia para su procesamiento.",
+	"getting-started.intro.step3": "Empieza a hacerle preguntas a Nuclia",
+	"getting-started.intro.three-steps-headline": "Estás a sólo tres pasos de generar respuestas a partir de tus datos.",
+	"getting-started.intro.title": "Comience en solo 3 simples pasos",
+	"getting-started.processing.description": "Dependiendo del contenido, puede llevar algunos minutos procesar sus datos en la base de datos vectorial NucliaDB.",
+	"getting-started.processing.estimated-time": "Tiempo de procesamiento estimado: {{estimation}}min",
+	"getting-started.processing.status.estimated-time": "Quedan {{estimation}} min",
+	"getting-started.processing.status.failed": "Ha fallado",
+	"getting-started.processing.status.processed": "Procesamiento completado",
+	"getting-started.processing.status.processing": "Tratamiento",
+	"getting-started.processing.status.queued": "En cola",
+	"getting-started.processing.status.uploading": "Cargando",
+	"getting-started.processing.title": "2. Carga y procesamiento",
+	"getting-started.search.description": "Haz preguntas sobre tus datos, compara resultados, crea resúmenes o chatea con tus documentos.",
+	"getting-started.search.go-to-search": "Ir a la página de búsqueda",
+	"getting-started.search.title": "3. Obtenga respuestas",
+	"getting-started.upload.and-or": "Y / O",
+	"getting-started.upload.description": "Cargue parte de su contenido en forma de archivos o enlaces a sitios web disponibles públicamente. Una vez subido, puede tomar algunos minutos procesar el contenido y preparar sus datos.",
+	"getting-started.upload.disclaimer.dont-worry": "No te preocupes, siempre podrás agregar fácilmente más contenidos y de mayor tamaño más adelante.",
+	"getting-started.upload.disclaimer.dont-worry-trial": "No se preocupe, su prueba gratuita le permitirá agregar fácilmente más contenidos y de mayor tamaño más adelante.",
+	"getting-started.upload.disclaimer.first-links-toast": "Solo conservamos las {{count}} primeras URLs de las {{total}} que seleccionó.",
+	"getting-started.upload.disclaimer.limit": "<strong>Cargue hasta cinco páginas web o archivos</strong>, manteniéndolos pequeños para que el procesamiento sea rápido (documentos de hasta 20 páginas o películas o audio de 5 minutos).",
+	"getting-started.upload.disclaimer.smallest-files-toast": "Conservamos solo los {{count}} archivos más pequeños de los {{total}} que seleccionó.",
+	"getting-started.upload.link-textarea.help": "Una URL por línea",
+	"getting-started.upload.link-textarea.label": "Escriba o pegue las URLs de páginas web",
+	"getting-started.upload.title": "1. Cargar datos",
 	"label-set.add": "Agregar conjunto de etiquetas",
 	"label-set.add-button": "Añadir nuevo",
 	"label-set.delete.confirm-description": "Al eliminar el conjunto de etiquetas, también se eliminarán todas sus etiquetas. No puede deshacer esta acción. También podría afectar las capacitaciones en curso y las sugerencias generadas.",
