--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -390,6 +390,34 @@
 	"generic.yes": "Oui",
 	"generic.zone": "Zone de traitement",
 	"generic.zone_and_provider": "Zone d'approvisionnement et de transformation",
+	"getting-started.intro.highlighted-description": "Téléchargez certaines données dont vous aimeriez obtenir des réponses.",
+	"getting-started.intro.step1": "Sélectionnez du contenu ou des données",
+	"getting-started.intro.step2": "Téléchargez-les sur Nuclia pour traitement",
+	"getting-started.intro.step3": "Commencez à poser des questions à Nuclia",
+	"getting-started.intro.three-steps-headline": "Vous n'êtes qu'à trois étapes de générer des réponses à partir de vos données",
+	"getting-started.intro.title": "Commencez en seulement 3 étapes simples",
+	"getting-started.processing.description": "Selon le contenu, le traitement de vos données dans la base de données vectorielles NucliaDB peut prendre quelques minutes.",
+	"getting-started.processing.estimated-time": "Temps de traitement estimé :  {{estimation}} min",
+	"getting-started.processing.status.estimated-time": "Il reste {{estimation}}  min",
+	"getting-started.processing.status.failed": "En échec",
+	"getting-started.processing.status.processed": "Traitement terminé",
+	"getting-started.processing.status.processing": "Traitement",
+	"getting-started.processing.status.queued": "En file d'attente",
+	"getting-started.processing.status.uploading": "Téléchargement",
+	"getting-started.processing.title": "2. Téléchargement et traitement",
+	"getting-started.search.description": "Posez des questions sur vos données, comparez les résultats, créez des résumés ou discutez avec vos documents.",
+	"getting-started.search.go-to-search": "Aller à la page de recherche",
+	"getting-started.search.title": "3. Obtenez des réponses",
+	"getting-started.upload.and-or": "Et / ou",
+	"getting-started.upload.description": "Téléchargez une partie de votre contenu sous forme de fichiers ou de liens vers des sites Web accessibles au public. Une fois téléchargé, le traitement du contenu et la préparation de vos données peuvent prendre quelques minutes.",
+	"getting-started.upload.disclaimer.dont-worry": "Ne vous inquiétez pas, vous pourrez toujours ajouter facilement des contenus plus nombreux et plus volumineux ultérieurement.",
+	"getting-started.upload.disclaimer.dont-worry-trial": "Ne vous inquiétez pas, votre essai gratuit vous permettra d'ajouter facilement des contenus plus nombreux et plus volumineux ultérieurement.",
+	"getting-started.upload.disclaimer.first-links-toast": "Nous n'avons conservé que les {{count}} premières URLs parmi les {{total}} que vous avez sélectionnées.",
+	"getting-started.upload.disclaimer.limit": "<strong> Importez jusqu'à cinq pages Web ou fichiers </strong>, en les gardant petits afin que le traitement reste rapide (jusqu'à 20 pages de documents ou 5 minutes de film ou d'audio).",
+	"getting-started.upload.disclaimer.smallest-files-toast": "Nous n'avons conservé que les {{count}} plus petits fichiers parmi les {{total}} que vous avez sélectionnés.",
+	"getting-started.upload.link-textarea.help": "Une URL par ligne",
+	"getting-started.upload.link-textarea.label": "Tapez ou collez les URLs des pages Web",
+	"getting-started.upload.title": "1. Télécharger des données",
 	"label-set.add": "Ajouter un jeu d'étiquettes",
 	"label-set.add-button": "Ajouter nouveau",
 	"label-set.delete.confirm-description": "La suppression du jeu d'étiquettes supprimera également toutes ses étiquettes. Vous ne pouvez pas annuler cette action. Cela peut également affecter les formations en cours et les suggestions générées.",
