--- a/libs/common/src/assets/i18n/pt.json
+++ b/libs/common/src/assets/i18n/pt.json
@@ -390,6 +390,34 @@
 	"generic.yes": "Sim",
 	"generic.zone": "Zona de processamento",
 	"generic.zone_and_provider": "Provedor e zona de processamento",
+	"getting-started.intro.highlighted-description": "Carregue alguns dados dos quais você gostaria de obter respostas.",
+	"getting-started.intro.step1": "Selecione algum conteúdo ou dados",
+	"getting-started.intro.step2": "Faça upload para Nuclia para processamento",
+	"getting-started.intro.step3": "Comece a fazer perguntas à Nuclia",
+	"getting-started.intro.three-steps-headline": "Você está a apenas três passos de gerar respostas a partir de seus dados",
+	"getting-started.intro.title": "Comece em apenas 3 passos simples",
+	"getting-started.processing.description": "Dependendo do conteúdo, pode levar alguns minutos para processar seus dados no banco de dados vetorial NucliaDB.",
+	"getting-started.processing.estimated-time": "Tempo estimado de processamento: {{estimation}}min",
+	"getting-started.processing.status.estimated-time": "Faltam {{estimation}} min",
+	"getting-started.processing.status.failed": "Falhou",
+	"getting-started.processing.status.processed": "Processamento concluído",
+	"getting-started.processing.status.processing": "Processamento",
+	"getting-started.processing.status.queued": "Na fila",
+	"getting-started.processing.status.uploading": "Fazendo upload",
+	"getting-started.processing.title": "2. Upload e processamento",
+	"getting-started.search.description": "Faça perguntas sobre seus dados, compare resultados, crie resumos ou converse com seus documentos.",
+	"getting-started.search.go-to-search": "Ir para a página de pesquisa",
+	"getting-started.search.title": "3. Obtenha respostas",
+	"getting-started.upload.and-or": "E/ou",
+	"getting-started.upload.description": "Carregue parte do seu conteúdo na forma de arquivos ou links de sites disponíveis publicamente. Depois de carregado, pode levar alguns minutos para processar o conteúdo e preparar seus dados.",
+	"getting-started.upload.disclaimer.dont-worry": "Não se preocupe, você sempre poderá adicionar facilmente mais conteúdos maiores posteriormente.",
+	"getting-started.upload.disclaimer.dont-worry-trial": "Não se preocupe, seu teste gratuito permitirá que você adicione facilmente mais conteúdos maiores posteriormente.",
+	"getting-started.upload.disclaimer.first-links-toast": "Mantivemos apenas os {{count}} primeiros URLs dos {{total}} selecionados.",
+	"getting-started.upload.disclaimer.limit": "<strong>Faça upload de até cinco páginas da Web ou arquivos</strong>, mantendo-os pequenos para que o processamento seja rápido (documentos de até 20 páginas ou filme ou áudio de 5 minutos).",
+	"getting-started.upload.disclaimer.smallest-files-toast": "Mantivemos apenas os {{count}} arquivos menores dos {{total}} selecionados.",
+	"getting-started.upload.link-textarea.help": "Um URL por linha",
+	"getting-started.upload.link-textarea.label": "Digite ou cole URLs de páginas da web",
+	"getting-started.upload.title": "1. Carregar dados",
 	"label-set.add": "Adicionar conjunto de rótulos",
 	"label-set.add-button": "Adicionar novo",
 	"label-set.delete.confirm-description": "Excluir o conjunto de rótulos também excluirá todos os seus rótulos. Você não pode desfazer esta ação. Também pode afetar os treinamentos contínuos e as sugestões geradas.",
