Fix disabled translation in spanish and french [sc-7975]

--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -318,7 +318,7 @@
 	"generic.deleting": "Borrando",
 	"generic.description": "Descripción",
 	"generic.deselect_all": "deseleccionar todo",
-	"generic.disabled": "Discapacitados",
+	"generic.disabled": "Deshabilitado",
 	"generic.download": "Descargar",
 	"generic.download_algolia_json": "TODO",
 	"generic.edit": "Edit",
@@ -649,7 +649,7 @@
 	"stash.config.option.chatgpt": "OpenAI ChatGPT",
 	"stash.config.option.chatgpt-azure": "OpenAI + Azure ChatGPT",
 	"stash.config.option.cohere": "Cohere Command (beta)",
-	"stash.config.option.disabled": "Discapacitado",
+	"stash.config.option.disabled": "Deshabilitado",
 	"stash.config.option.enabled": "Habilitado",
 	"stash.config.option.generative-multilingual-2023": "Nuclia multilingual private model",
 	"stash.config.option.multilingual-2023-08-16": "multilingual (alpha)",
