--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -323,7 +323,7 @@
 	"generic.download": "Télécharger",
 	"generic.download_algolia_json": "Télécharger JSON pour Algolia",
 	"generic.edit": "Edit",
-	"generic.enabled": "Active",
+	"generic.enabled": "Activé",
 	"generic.error.oops": "Oups ! Quelque chose n'a pas fonctionné !",
 	"generic.expand_info": "afficher toutes les informations",
 	"generic.find_it": "Trouvez-le",
