Fix disabled translation in spanish and french [sc-7975] (#1166)
* Fix disabled translation in spanish and french [sc-7975]

* Fix enabled translation in french

--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -319,11 +319,11 @@
 	"generic.deleting": "Suppression de",
 	"generic.description": "Description",
 	"generic.deselect_all": "Effacer tout",
-	"generic.disabled": "Handicapés",
+	"generic.disabled": "Désactivé",
 	"generic.download": "Télécharger",
 	"generic.download_algolia_json": "Télécharger JSON pour Algolia",
 	"generic.edit": "Edit",
-	"generic.enabled": "Active",
+	"generic.enabled": "Activé",
 	"generic.error.oops": "Oups ! Quelque chose n'a pas fonctionné !",
 	"generic.expand_info": "afficher toutes les informations",
 	"generic.find_it": "Trouvez-le",
